# mini-message-queue

./: README.md  pyproject.toml
mini_message_queue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
minimq/: __init__.py  core.py
tests/: test_minimq.py
